fix: formula field overflow on function wizard window

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -2263,3 +2263,10 @@ kbd,
 	display: table-caption;
 	height: 16px;
 }
+
+/* text-area overflow on function wizard window */
+
+#FormulaDialog #ed_formula.ui-textarea {
+	max-width: 392px;
+}
+
